--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     gtag('config', 'G-3SW0XQEKEC');
   </script>
 </head>
-<body>
+<body id="main-theme">
   <app-root></app-root>
 </body>
 </html>
